[gd_scene load_steps=12 format=2]

[ext_resource path="res://client/ui/ui.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/world/world.tscn" type="PackedScene" id=2]
[ext_resource path="res://client/world/world.gd" type="Script" id=3]
[ext_resource path="res://client/world/finish_line/finish_line.tscn" type="PackedScene" id=5]
[ext_resource path="res://client/music/peak_and_drozerix_-_spectrum.ogg" type="AudioStream" id=6]
[ext_resource path="res://client/audio/finish_sfx.ogg" type="AudioStream" id=7]
[ext_resource path="res://client/world/player/player.tscn" type="PackedScene" id=8]
[ext_resource path="res://client/world/wall/wall.tscn" type="PackedScene" id=9]
[ext_resource path="res://client/music/music_player.tscn" type="PackedScene" id=10]
[ext_resource path="res://client/world/background/cloud_background.tscn" type="PackedScene" id=11]
[ext_resource path="res://client/world/main_camera.tscn" type="PackedScene" id=12]

[node name="World" instance=ExtResource( 2 )]
script = ExtResource( 3 )
Wall = ExtResource( 9 )
Player = ExtResource( 8 )
FinishLine = ExtResource( 5 )

[node name="UI" parent="." index="0" instance=ExtResource( 1 )]
follow_viewport_enable = false

[node name="MainCamera" parent="." index="1" instance=ExtResource( 12 )]

[node name="FinishMusic" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource( 6 )
bus = "Music"
__meta__ = {
"_editor_description_": ""
}

[node name="FinishChime" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 7 )
volume_db = 5.0
bus = "Sounds"

[node name="MusicPlayer" parent="." index="4" instance=ExtResource( 10 )]

[node name="CloudBackground" parent="." index="5" instance=ExtResource( 11 )]

[connection signal="countdown_finished" from="UI" to="." method="_on_UI_countdown_finished"]
[connection signal="request_restart" from="UI" to="." method="_on_UI_request_restart"]
